--- a/day_18.ipynb
+++ b/day_18.ipynb
@@ -746,6 +746,334 @@
    "source": [
     "df.groupBy('Survived').mean('Fare', 'Age').show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7a262d9",
+   "metadata": {},
+   "source": [
+    "### Факторные переменные"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "bdfb697d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+------+----+\n",
+      "|Survived|female|male|\n",
+      "+--------+------+----+\n",
+      "|       1|   233| 109|\n",
+      "|       0|    81| 468|\n",
+      "+--------+------+----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.groupBy('Survived').pivot('Sex').count().show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d7a3a5ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+---+---+---+\n",
+      "|Survived|  1|  2|  3|\n",
+      "+--------+---+---+---+\n",
+      "|       1|136| 87|119|\n",
+      "|       0| 80| 97|372|\n",
+      "+--------+---+---+---+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.groupBy('Survived').pivot('Pclass').count().show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "eef4feaf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+---+---+---+---+---+----+----+\n",
+      "|Survived|  0|  1|  2|  3|  4|   5|   8|\n",
+      "+--------+---+---+---+---+---+----+----+\n",
+      "|       1|210|112| 13|  4|  3|NULL|NULL|\n",
+      "|       0|398| 97| 15| 12| 15|   5|   7|\n",
+      "+--------+---+---+---+---+---+----+----+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.groupBy('Survived').pivot('SibSp').count().show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce1fa249",
+   "metadata": {},
+   "source": [
+    "### Извлечение признаков"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "dcdeaaeb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PassengerId          0\n",
+      "Survived             0\n",
+      "Pclass               0\n",
+      "Name                 0\n",
+      "Sex                  0\n",
+      "Age                  177\n",
+      "SibSp                0\n",
+      "Parch                0\n",
+      "Ticket               0\n",
+      "Fare                 0\n",
+      "Cabin                687\n",
+      "Embarked             2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for col in df.columns:\n",
+    "    print(col.ljust(20), df.filter(df[col].isNull()).count())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a4d0467",
+   "metadata": {},
+   "source": [
+    "### Извлечение данных о титулах"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "2fc7f9c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+----------+------------------+\n",
+      "|   Title|count(Age)|          avg(Age)|\n",
+      "+--------+----------+------------------+\n",
+      "|     Don|         1|              40.0|\n",
+      "|Countess|         1|              33.0|\n",
+      "|    Lady|         1|              48.0|\n",
+      "|     Mme|         1|              24.0|\n",
+      "|    Capt|         1|              70.0|\n",
+      "|     Sir|         1|              49.0|\n",
+      "|Jonkheer|         1|              38.0|\n",
+      "|      Ms|         1|              28.0|\n",
+      "|     Col|         2|              58.0|\n",
+      "|    Mlle|         2|              24.0|\n",
+      "|   Major|         2|              48.5|\n",
+      "|     Rev|         6|43.166666666666664|\n",
+      "|      Dr|         6|              42.0|\n",
+      "|  Master|        36| 4.574166666666667|\n",
+      "|     Mrs|       108|35.898148148148145|\n",
+      "|    Miss|       146|21.773972602739725|\n",
+      "|      Mr|       398|32.368090452261306|\n",
+      "+--------+----------+------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = df.withColumn('Title', regexp_extract(df['Name'], '([A-Za-z]+)\\.', 1))\n",
+    "df.groupBy('Title').agg(count('Age'), mean('Age')).sort('count(Age)').show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "ac3072d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "title_dic = {'Mr':'Mr', 'Miss':'Miss', 'Mrs':'Mrs', 'Master':'Master', \\\n",
+    "             'Mlle': 'Miss', 'Major': 'Mr', 'Col': 'Mr', 'Sir': 'Mr',\\\n",
+    "             'Don': 'Mr', 'Mme': 'Miss', 'Jonkheer': 'Mr', 'Lady': 'Mrs',\\\n",
+    "             'Capt': 'Mr', 'Countess': 'Mrs', 'Ms': 'Miss', 'Dona': 'Mrs', \\\n",
+    "             'Dr':'Mr', 'Rev':'Mr'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "dff02e0e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------+------------------+\n",
+      "| Title|          avg(Age)|\n",
+      "+------+------------------+\n",
+      "|  Miss|             21.86|\n",
+      "|Master| 4.574166666666667|\n",
+      "|    Mr| 33.02272727272727|\n",
+      "|   Mrs|35.981818181818184|\n",
+      "+------+------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "mapping = create_map([lit(x) for x in chain(*title_dic.items())])\n",
+    "\n",
+    "df = df.withColumn('Title', mapping[df['Title']])\n",
+    "df.groupBy('Title').mean('Age').show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20be982c",
+   "metadata": {},
+   "source": [
+    "### Извлечение сведений по ворзрасту"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "63a0e7bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def age_imputer(df, title, age):\n",
+    "    return df.withColumn('Age', when((df['Age'].isNull()) & (df['Title'] == title), age).otherwise(df['Age']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "28d5fb94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = age_imputer(df, 'Mr', 33.02)\n",
+    "df = age_imputer(df, 'Mrs', 35.98)\n",
+    "df = age_imputer(df, 'Miss', 21.86)\n",
+    "df = age_imputer(df, 'Master', 4.57)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92bdd244",
+   "metadata": {},
+   "source": [
+    "### Добавление агрегирующих данных и удаление неиспользуемых"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "0ec40cf1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.withColumn('FamilySize', df['Parch'] + df['SibSp']).drop('Parch', 'SibSp')\n",
+    "df = df.drop('PassengerId', 'Cabin', 'Name', 'Ticket', 'Title')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "16dbaaae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+------+------+----+-------+--------+----------+\n",
+      "|Survived|Pclass|   Sex| Age|   Fare|Embarked|FamilySize|\n",
+      "+--------+------+------+----+-------+--------+----------+\n",
+      "|       0|     3|  male|22.0|   7.25|       S|         1|\n",
+      "|       1|     1|female|38.0|71.2833|       C|         1|\n",
+      "|       1|     3|female|26.0|  7.925|       S|         0|\n",
+      "+--------+------+------+----+-------+--------+----------+\n",
+      "only showing top 3 rows\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.show(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "5fbdb18b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.fillna({'Embarked' : 'S'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "19b3f733",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Survived             0\n",
+      "Pclass               0\n",
+      "Sex                  0\n",
+      "Age                  0\n",
+      "Fare                 0\n",
+      "Embarked             0\n",
+      "FamilySize           0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for col in df.columns:\n",
+    "    print(col.ljust(20), df.filter(df[col].isNull()).count())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01dece6c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
