--- a/day_18.ipynb
+++ b/day_18.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "83c78e31",
    "metadata": {},
    "outputs": [],
@@ -30,12 +30,9 @@
      "text": [
       "WARNING: Using incubator modules: jdk.incubator.vector\n",
       "Using Spark's default log4j profile: org/apache/spark/log4j2-defaults.properties\n",
-      "25/10/22 16:52:20 WARN Utils: Your hostname, Artems-MacBook-Pro.local, resolves to a loopback address: 127.0.0.1; using 192.168.0.149 instead (on interface en0)\n",
-      "25/10/22 16:52:20 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
-      "Using Spark's default log4j profile: org/apache/spark/log4j2-defaults.properties\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "25/10/22 16:52:21 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "25/10/23 15:35:13 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -620,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "c66c39c9",
    "metadata": {},
    "outputs": [
@@ -628,7 +625,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "25/10/22 17:20:06 WARN SparkStringUtils: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n"
+      "25/10/23 15:36:28 WARN SparkStringUtils: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n"
      ]
     },
     {
@@ -657,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "52c76a76",
    "metadata": {},
    "outputs": [
@@ -693,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "60259793",
    "metadata": {},
    "outputs": [
@@ -725,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "9d95e4fc",
    "metadata": {},
    "outputs": [
@@ -757,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "bdfb697d",
    "metadata": {},
    "outputs": [
@@ -781,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "d7a3a5ca",
    "metadata": {},
    "outputs": [
@@ -805,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "eef4feaf",
    "metadata": {},
    "outputs": [
@@ -837,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "dcdeaaeb",
    "metadata": {},
    "outputs": [
@@ -875,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "2fc7f9c1",
    "metadata": {},
    "outputs": [
@@ -915,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "ac3072d7",
    "metadata": {},
    "outputs": [],
@@ -929,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "dff02e0e",
    "metadata": {},
    "outputs": [
@@ -966,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "63a0e7bc",
    "metadata": {},
    "outputs": [],
@@ -977,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "28d5fb94",
    "metadata": {},
    "outputs": [],
@@ -998,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "0ec40cf1",
    "metadata": {},
    "outputs": [],
@@ -1009,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "id": "16dbaaae",
    "metadata": {},
    "outputs": [
@@ -1034,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "id": "5fbdb18b",
    "metadata": {},
    "outputs": [],
@@ -1044,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "id": "19b3f733",
    "metadata": {},
    "outputs": [
@@ -1068,12 +1065,202 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ab6bdac0",
+   "metadata": {},
+   "source": [
+    "### Построение модели (Spark ML)\n",
+    "\n",
+    "- Stringindexer: преобразование строковых категорий в численные\n",
+    "- Векторный Ассемблер: Spark API\n",
+    "- Логистическая регрессия, Случайный лес, GBT\n",
+    "- Конвейер"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dcec1742",
+   "metadata": {},
+   "source": [
+    "### Подключение библиотек из Spark ML"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "01dece6c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from pyspark.ml.feature import StringIndexer, VectorAssembler\n",
+    "from pyspark.ml.classification import LogisticRegression, RandomForestClassifier, GBTClassifier\n",
+    "from pyspark.ml.evaluation import MulticlassClassificationEvaluator\n",
+    "from pyspark.ml import Pipeline\n",
+    "from pyspark.ml.tuning import CrossValidator, ParamGridBuilder"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6932de5f",
+   "metadata": {},
+   "source": [
+    "### String Indexer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "88a7a62d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+------+----+-------+----------+------+-----------+\n",
+      "|Survived|Pclass| Age|   Fare|FamilySize|SexNum|EmbarkedNum|\n",
+      "+--------+------+----+-------+----------+------+-----------+\n",
+      "|       0|     3|22.0|   7.25|         1|   0.0|        0.0|\n",
+      "|       1|     1|38.0|71.2833|         1|   1.0|        1.0|\n",
+      "|       1|     3|26.0|  7.925|         0|   1.0|        0.0|\n",
+      "+--------+------+----+-------+----------+------+-----------+\n",
+      "only showing top 3 rows\n"
+     ]
+    }
+   ],
+   "source": [
+    "stringIndexer = StringIndexer(inputCols=['Sex', 'Embarked'], outputCols=['SexNum', 'EmbarkedNum'])\n",
+    "stringIndexer_model =stringIndexer.fit(df)\n",
+    "df_ = stringIndexer_model.transform(df).drop('Sex', 'Embarked')\n",
+    "df_.show(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16cc4d14",
+   "metadata": {},
+   "source": [
+    "### Векторный ассемблер"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "f59b2eb9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------------------------+--------+\n",
+      "|features                      |Survived|\n",
+      "+------------------------------+--------+\n",
+      "|[3.0,22.0,7.25,1.0,0.0,0.0]   |0       |\n",
+      "|[1.0,38.0,71.2833,1.0,1.0,1.0]|1       |\n",
+      "|[3.0,26.0,7.925,0.0,1.0,0.0]  |1       |\n",
+      "+------------------------------+--------+\n",
+      "only showing top 3 rows\n"
+     ]
+    }
+   ],
+   "source": [
+    "vec_asmbl = VectorAssembler(inputCols=df_.columns[1:], outputCol='features')\n",
+    "df_ = vec_asmbl.transform(df_).select('features', 'Survived')\n",
+    "df_.show(3, truncate=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3214d560",
+   "metadata": {},
+   "source": [
+    "### Разбивка данных"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "cf520c9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+--------+\n",
+      "|features            |Survived|\n",
+      "+--------------------+--------+\n",
+      "|(6,[0,1],[1.0,38.0])|0       |\n",
+      "|(6,[0,1],[1.0,39.0])|0       |\n",
+      "|(6,[0,1],[1.0,40.0])|0       |\n",
+      "+--------------------+--------+\n",
+      "only showing top 3 rows\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_df, test_df = df_.randomSplit([0.7, 0.3])\n",
+    "train_df.show(3, truncate=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f1de4cf",
+   "metadata": {},
+   "source": [
+    "### Вычисления и метрики"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "f83ff507",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evalutor = MulticlassClassificationEvaluator(labelCol='Survived', metricName='accuracy')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "935181c8",
+   "metadata": {},
+   "source": [
+    "### Логистическая регрессия"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "e3a795a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "25/10/23 16:23:38 WARN InstanceBuilder: Failed to load implementation from:dev.ludovic.netlib.blas.JNIBLAS\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.7785977859778598"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ridge = LogisticRegression(labelCol='Survived', maxIter=100, elasticNetParam=0, regParam=0.3)\n",
+    "\n",
+    "model = ridge.fit(train_df)\n",
+    "pred = model.transform(test_df)\n",
+    "evalutor.evaluate(pred)"
+   ]
   }
  ],
  "metadata": {
