--- a/day_19.ipynb
+++ b/day_19.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 887,
    "id": "22471a68",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 888,
    "id": "28dd1a94",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 889,
    "id": "46808bce",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 890,
    "id": "cecb84c8",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 891,
    "id": "4566e6b8",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 892,
    "id": "7b125803",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 893,
    "id": "8c23ed31",
    "metadata": {},
    "outputs": [
@@ -224,13 +224,165 @@
        "       [ 1.02963969,  0.08242049,  1.04870476,  1.58098074]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 893,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "X_train"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "650cdc5d",
+   "metadata": {},
+   "source": [
+    "### Преобразование в тензоры PyTorch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 894,
+   "id": "c95e4b55",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = torch.tensor(X_train, dtype=torch.float32)\n",
+    "X_test = torch.tensor(X_test, dtype=torch.float32)\n",
+    "y_train = torch.tensor(y_train, dtype=torch.long)\n",
+    "y_test = torch.tensor(y_test, dtype=torch.long)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c32aaa59",
+   "metadata": {},
+   "source": [
+    "### Определение архитектуры нейронной сети"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 895,
+   "id": "8dc87b4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class IrisNet(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(IrisNet, self).__init__()\n",
+    "        self.fc1 = nn.Linear(4, 10)\n",
+    "        self.fc2 = nn.Linear(10, 3)\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        x = torch.relu(self.fc1(x))\n",
+    "        x = self.fc2(x)\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1cde1e7",
+   "metadata": {},
+   "source": [
+    "### Инициализация модели"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 896,
+   "id": "a88daae6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = IrisNet()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f70a92bc",
+   "metadata": {},
+   "source": [
+    "### Определение функции потерь и отпитизатора"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 897,
+   "id": "f02fc486",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "criterion = nn.CrossEntropyLoss()\n",
+    "optimizer = optim.Adam(model.parameters(), lr=0.01)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abc7a782",
+   "metadata": {},
+   "source": [
+    "### Обучение модели"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 898,
+   "id": "ce6de148",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [10/100], 0.6876\n",
+      "Epoch [20/100], 0.4795\n",
+      "Epoch [30/100], 0.3671\n",
+      "Epoch [40/100], 0.2958\n",
+      "Epoch [50/100], 0.2410\n",
+      "Epoch [60/100], 0.1917\n",
+      "Epoch [70/100], 0.1513\n",
+      "Epoch [80/100], 0.1200\n",
+      "Epoch [90/100], 0.0979\n",
+      "Epoch [100/100], 0.0849\n"
+     ]
+    }
+   ],
+   "source": [
+    "epochs = 100\n",
+    "for epoch in range(epochs):\n",
+    "    optimizer.zero_grad()\n",
+    "    outputs = model(X_train)\n",
+    "    loss = criterion(outputs, y_train)\n",
+    "    loss.backward()\n",
+    "    optimizer.step()\n",
+    "\n",
+    "    if (epoch + 1) % 10 == 0:\n",
+    "        print(f'Epoch [{epoch + 1}/{epochs}], {loss.item():.4f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 899,
+   "id": "1325b676",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 1.0000\n"
+     ]
+    }
+   ],
+   "source": [
+    "with torch.no_grad():\n",
+    "    model.eval()\n",
+    "    outputs = model(X_test)\n",
+    "    _, predicted = torch.max(outputs, 1)\n",
+    "    accuracy = (predicted == y_test).sum().item() / y_test.size(0)\n",
+    "    print(f'Accuracy: {accuracy:.4f}')"
    ]
   }
  ],
